--- a/block-BJaaeh/code/style.css
+++ b/block-BJaaeh/code/style.css
@@ -4,7 +4,13 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 2rem;  
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
+  align-items: center;
 }
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
@@ -19,3 +25,40 @@ h1,
 h2 {
   text-align: center;
 }
+
+html{
+  font-family: 'helvetica neue';
+  text-align: center;
+  font-size: 10px;
+}
+
+.hand {
+  width: 50%;
+  height: 6px;
+  background: black;
+  position: absolute;
+  top: 50%;
+  transform-origin: 100%;
+  transition: all 0.05s;
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+.clock{ 
+  width: 30rem;
+  height: 30rem;
+  border: 20px solid #000000;
+  border-radius: 50%;
+  margin: 50px auto;
+  padding: 2rem;
+  box-shadow: 
+  0 0 0px rgba(0,0,0,0.1),
+  inset 0 0 0 3px #EFEFEF,
+  inset 0 0 10px black,
+  0 0 10px rgba(0,0,0,0.2);
+}
+.clock-face {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-3px); 
+}
+
